--- a/organizers.html
+++ b/organizers.html
@@ -96,6 +96,11 @@
                           <h4 class="section-heading"><center><a href="http://www.weixiushen.com/">Xiu-Shen Wei</a></center></h4>
                           <h5 class="section-heading"><center><i>Nanjing University of Science and Technology</i></center></h5>
                       </div>
+                   <div class="col-sm-2 wow fadeInRightBig"  data-animation-delay="200">   
+                          <center><img  class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150" src="zyge.png" alt=""></center>
+                          <h4 class="section-heading"><center><a href="https://zongyuange.github.io/">Zongyuan Ge</a></center></h4>
+                          <h5 class="section-heading"><center><i>Monash University</i></center></h5>
+                      </div>
                  <div class="col-sm-2 wow fadeInRightBig"  data-animation-delay="200">   
                         <center><img  class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150" src="img/jfy2.png" alt=""></center>
                         <h4 class="section-heading"><center><a href="https://cv.nankai.edu.cn/">Jufeng Yang</a></center></h4>
