--- a/organizers.html
+++ b/organizers.html
@@ -97,7 +97,7 @@
                           <h5 class="section-heading"><center><i>Nanjing University of Science and Technology</i></center></h5>
                       </div>
                    <div class="col-sm-2 wow fadeInRightBig"  data-animation-delay="200">   
-                          <center><img  class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150" src="zyge.png" alt=""></center>
+                          <center><img  class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150" src="img/zyge1.png" alt=""></center>
                           <h4 class="section-heading"><center><a href="https://zongyuange.github.io/">Zongyuan Ge</a></center></h4>
                           <h5 class="section-heading"><center><i>Monash University</i></center></h5>
                       </div>
